// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser boolean expressions parses boolean ANDs 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 19,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Literal {
        "value": BrsBoolean {
          "kind": 1,
          "value": true,
        },
      },
      "right": Literal {
        "value": BrsBoolean {
          "kind": 1,
          "value": false,
        },
      },
      "token": Object {
        "isReserved": true,
        "kind": 38,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "and",
      },
    },
  },
]
`;

exports[`parser boolean expressions parses boolean ORs 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 19,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Literal {
        "value": BrsBoolean {
          "kind": 1,
          "value": true,
        },
      },
      "right": Literal {
        "value": BrsBoolean {
          "kind": 1,
          "value": false,
        },
      },
      "token": Object {
        "isReserved": true,
        "kind": 69,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "or",
      },
    },
  },
]
`;
